# paper_bot_ai

./: .gitignore  pyproject.toml
container/: Containerfile  build.sh  run.sh
src/: main.py  message_formater.py  search_papers.py
